--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ rand = "0.8.5"
 collision = "0.20.1"
 sdl2 = { version = "0.36.0", features = ["unsafe_textures", "gfx", "image"] }
 nalgebra = "0.32.5"
+clap = { version = "4.5.4", features = ["derive"] }
