--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Install
+      run: sudo apt-get install -y libsdl2-dev libsdl2-image-dev
     - name: Build
       run: cargo build --verbose
     - name: Run tests
